tests/ui/diagnostic-not-implemented-immutable.msrv.stderr
error[E0277]: the trait bound `NotZerocopy: Immutable` is not satisfied
  --> $DIR/diagnostic-not-implemented-immutable.rs:17:23
   |
17 |     takes_immutable::<NotZerocopy>();
   |                       ^^^^^^^^^^^ the trait `Immutable` is not implemented for `NotZerocopy`
   |
note: required by a bound in `takes_immutable`
  --> $DIR/diagnostic-not-implemented-immutable.rs:20:23
   |
20 | fn takes_immutable<T: Immutable>() {}
   |                       ^^^^^^^^^ required by this bound in `takes_immutable`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
